fix list align element

--- a/src/index.css
+++ b/src/index.css
@@ -15,15 +15,23 @@ body {
   background: var(--black);
   color: var(--yellow);
   letter-spacing: 0.05em;
+
+}
+
+.page{
+  display: flex;
+  flex-direction: column;
+  text-align: center;
 }
 
 ul {
   list-style: none;
+  align-items: center;
 }
 
 li {
   border: 2px dashed var(--yellow);
-  max-width: 60%;
+  width: 50%;
   margin-bottom: 10px;
 }
 
@@ -58,18 +66,6 @@ input[type="text"] {
 }
 input[type="text"]:focus {
   outline: none;
-}
-input[type="checkbox"] {
-  position: relative;
-  width: 1.5em;
-  height: 1.5em;
-  color: var(--yellow);
-  border: 1px solid var(--gray);
-  border-radius: 4px;
-  appearance: none;
-  outline: 0;
-  cursor: pointer;
-  transition: background 175ms cubic-bezier(0.1, 0.1, 0.25, 1);
 }
 
 p {
